Browser compatibility: slider label wrap fix

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,6 +24,7 @@
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 30px;
 }
 
@@ -48,8 +49,9 @@
 
 .slider {
     -webkit-appearance: none;
-    width: calc(100% - (153px));
+    width: 100%;
     height: 10px;
+    padding-top: 1rem;
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.3);
     outline: none;
@@ -77,9 +79,7 @@
 }
 
 .slider-radius-label {
-    display: inline-block;
-    position: relative;
-    width: 140px;
+    width: 200px;
     color: #fff;
     text-align: center;
     margin-left: 9px;
